cod-tools (unreleased)

  * Added:
    - COD::CIF::Data::CODFlags:
        - has_dummy_sites() subroutine.
        - has_non_hydrogen_calc_sites() subroutine.
        - has_superspace_group() subroutine.
        - has_unmodelled_solvent_molecules() subroutine.
    - cif_cod_deposit:
        - User-Agent HTTP header.
  * Fixed:
    - COD::CIF::Tags::Print:
        - homogenised the formatting of long lines in
          the print_single_tag_and_value() subroutine.
    - COD::CIF::ChangeLog:
        - updated the append_changelog_to_single_item() subroutine
          to properly create the changelog data item if it does not
          yet exist in the data block.
    - codcif:
        - memory leak of the last line read in by the lexer;
        - carriage return ('\r') is allowed in CIF 2.0 file heading;
        - carriage return ('\r') may precede ';' in CIF 2.0 text field
          delimiters.
    - codcif and COD::CIF::Parser::Yapp:
        - not unprefixing a prefixed CIF text field unless all of its lines
          (must be one or more) start with the same prefix.

cod-tools (3.4.0)

  * Added:
    - cif_ddlm_dic_check:
        - a check that detects improper usage of
          the _definition_replaced.by attribute.
        - a check that detects improper usage of
          the _category_key.name attribute.
        - a check that detects improper usage of
          the _definition.class attribute.
        - a check that detects improper usage of
          the _type.indices_referenced_id attribute.
        - a check that detects improper usage of
          the _type.contents_referenced_id attribute.
        - a check that detects incompatibilities between the attributes
          of linked data items.
    - cif_ddlm_validate:
        - the '--follow-iucr-style-guide' and '--no-follow-iucr-style-guide'
          options.
        - support for the 'Word' content type.
    - cif_fillcell:
        - the '--dont-merge-special-positions' and