@@ -1,0 +1,1 @@
+C1[CH]C1([O])[O]
