@@ -1,6 +1,8 @@
 cod-tools (unreleased)
 
   * Added:
+    - COD::AtomNeighbours:
+        - neighbour_list_to_chemistry_mol() subroutine.
     - COD::CIF::Data::CODFlags:
         - has_dummy_sites() subroutine.
         - has_non_hydrogen_calc_sites() subroutine.
